<resources>
    <string name="app_name" translatable="false">ScanBridge</string>
    <string name="print_symbol_desc">Printer icon</string>
    <string name="settings">Settings</string>
    <string name="no_scanners_found">No scanners found. Are you connected to a local network?</string>
    <string name="warning_desc">Warning icon</string>
    <string name="error_title">Error</string>
    <string name="scannercapabilities_retrieve_error">An error occurred while trying to retrieve scanner capabilities:\n\n%1$s</string>
    <string name="okay_text">Okay</string>
    <string name="trying_to_retrieve_scannercapabilities">Trying to retrieve ScannerCapabilities</string>
    <string name="scan">Scan</string>
    <string name="cancel_scan">Cancel</string>
    <string name="cancelling_scan">Cancelling…</string>
    <string name="desc_scanned_page">A scanned page</string>
    <string name="job_canceled">The job was canceled</string>
    <string name="job_aborted_because_error">The job was aborted because of an error</string>
    <string name="job_completed_successfully">The job was completed successfully</string>
    <string name="job_still_pending">The job is still pending</string>
    <string name="job_pages_still_processed">The pages are still processed</string>
    <string name="job_state_cannot_be_retrieved">The job state can\'t be retrieved</string>
    <string name="delete_current_page">Delete current page</string>
    <string name="swap_with_previous_page">Swap with previous</string>
    <string name="swap_with_next_page">Swap with next</string>
    <string name="page_x_of_y">Page %1$s of %2$s</string>
    <string name="export">Export</string>
    <string name="retrieving_page">Retrieving page</string>
    <string name="exporting">Exporting…</string>
    <string name="no_scans_yet">No pages were scanned yet. Click the scan button :)</string>
    <string name="platen">Platen</string>
    <string name="adf">ADF</string>
    <string name="header_scannerbrowser">Available scanners</string>
    <string name="discovery">Discovery</string>
    <string name="copy_current_scanner_options_in_esclkt_format">Copy current scan options in eSCLKt format</string>
    <string name="scan_settings">Scan settings</string>
    <string name="error_state_not_in_allowed_range">Not in allowed range</string>
    <string name="error_state_not_a_valid_number">Not a valid number</string>
    <string name="error_state_valid">Valid</string>
    <string name="input_source">Input source:</string>
    <string name="resolution_dpi">Used Resolution (dpi):</string>
    <string name="setting_duplex">Duplex</string>
    <string name="default_string">Default</string>
    <string name="width_in_unit">Width (in %1$s)</string>
    <string name="height_in_unit">Height (in %1$s)</string>
    <string name="maximum_size">Maximum size</string>
    <string name="custom">Custom</string>
    <string name="job_still_running">Job still running</string>
    <string name="error_while_retrieving_page">Error while retrieving page: %1$s</string>
    <string name="copy">Copy</string>
    <string name="error">Error</string>
    <string name="scans_will_be_lost_title">Scans unsaved</string>
    <string name="scans_will_be_lost_text">Do you really want to close the scanning interface? Any scans that you didn\'t export will be lost!</string>
    <string name="cancel_text">Cancel</string>
    <string name="leave_text">Leave</string>
    <string name="app_icon_desc">App icon</string>
    <string name="debug_build">Debug</string>
    <string name="auto_cleanup_info_desc">Info button for the setting</string>
    <string name="crash_log_file_exists">Crash log file exists</string>
    <string name="crash_log_was_found">A crash log was found. This is the exception which led to the crash. Please attach this to your bug report:</string>
    <string name="confirm_crash_log_deletion">OK, delete it</string>
    <string name="camera">Camera</string>
    <string name="temporary_files_found">Temporary files found</string>
    <string name="temporary_files_dialog_content">Temporary files (scans and/or exports) were found in the app storage. These are files which remain in the app storage if the app is closed from the overview or killed by Android while being in a scanning session. The main reason for this dialog is that asking for confirmation of deletion was impossible when the app was closed in this way.\n\nWhat do you want to do with the following scan and export files?:\n%1$s</string>
    <string name="delete">Delete</string>
    <string name="do_nothing">Do nothing</string>
    <string name="rotate_right">Rotate right</string>
    <string name="rotating_page">Rotating…</string>
    <string name="custom_scanner_desc">Access custom scanner</string>
    <string name="connect">Just connect</string>
    <string name="url_escl_resource">URL (eSCL resource)</string>
    <string name="new_custom_scanner_dialog_title">Connect to a custom scanner</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="error_state_please_enter_an_url">Please enter an URL</string>
    <string name="custom_scanner">Custom scanner</string>
    <string name="export_pdf">Export as PDF</string>
    <string name="export_as_archive">Export as archive of JPEGs</string>
    <string name="no_further_pages">No further pages. %1$s</string>
    <string name="error_while_copying_received_image_to_file">Error while copying received image to file: %1$s</string>
    <string name="couldn_t_decode_received_image">Couldn\'t decode received image. %1$s</string>
    <string name="intent">Intent:</string>
    <string name="scan_region">Scan Region:</string>
    <string name="page_deletion_confirmation">Do you really want to delete the current page? This action can not be undone.</string>
    <string name="debug_log">Debug log</string>
    <string name="debug_log_explanation">This will write all available log data to an exportable file. This is useful for submitting bug repots.</string>
    <string name="clear_debug_log">Clear debug log</string>
    <string name="export_debug_log">Export debug log</string>
    <string name="timeout_info">This timeout determines how long ScanBridge waits at maximum for the scanner to respond to requests until it aborts the scan job.\n\nThis is mostly useful for slow scanners and large scan areas which take longer to scan.</string>
    <string name="timeout">Response Timeout (in seconds)</string>
    <string name="advanced">Advanced Settings</string>
    <string name="connect_and_save"><![CDATA[Connect & save]]></string>
    <string name="name">Name</string>
    <string name="scanner_name_placeholder">HP Deskjet</string>
    <string name="discovered_scanners">Discovered scanners</string>
    <string name="saved_scanners">Saved scanners</string>
    <string name="pdf_export_max_pages_per_pdf">Max. pages per PDF file</string>
    <string name="pdf_export_setting_info">As a smartphone has limited memory, it can becomes difficult to handle large PDFs. To prevent crashes, ScanBridge limits the maximum count pages stored in one PDF file when exporting scanned pages as PDF. If there are too much pages, multiple PDFs are created and stored into a ZIP archive. These PDFs can be merged afterwards, if needed.\n\nWarning: Increasing this too far can lead to crashes while exporting if a large number of pages are to be exported.</string>
    <string name="disable_cert_checks">Disable certificate checks</string>
    <string name="disable_cert_checks_desc">This option disables all HTTPS certificate validation. Any certificate will be accepted, including self-signed, expired, or otherwise invalid ones. Do not use this option on insecure or public networks, as it makes man-in-the-middle (MitM) attacks possible.\n\nIn most cases, scanners are used on private networks or over VPN connections, where concerns about authenticity are minimal. In such environments, disabling certificate checks is unlikely to pose a real security risk. And in case confidentiality or authenticity is a concern, even HTTPS won\'t help much, as eSCL lacks client authentication altogether. Anyone with access to the network can potentially retrieve scanned pages.</string>
    <string name="remember_scan_settings">Remember scan settings</string>
    <string name="remember_scan_settings_desc">When enabled, your last used scan settings (input source, duplex, etc.) will be restored when you create a new scan session.\n\nWhen disabled, each session starts with default scan settings (highest resolution, largest possible scan area).</string>
    <string name="donate">Support development</string>
    <string name="source_code">View source code</string>
    <string name="f_droid" translatable="false">F-Droid</string>
    <string name="google_play" translatable="false">Play Store</string>
    <string name="save_to_file">Save to File</string>
    <string name="loading_image">Loading image…</string>
    <string name="crop">Crop current page</string>
    <string name="crop_button">Crop</string>
    <string name="cropping">Cropping page…</string>
    <string name="activate_zoom_gestures">Activate zoom gestures</string>
    <string name="crash">ScanBridge crashed :(</string>
    <string name="crash_occurred">"We are sorry. ScanBridge has crashed. Please report this issue and attach the following stacktrace (you can copy it with the button at the bottom)"</string>
    <string name="loading_previous_session_failed">Loading previous session failed…  %1$s</string>
    <string name="scannercapabilities_null">The scanner capabilities should be retrieved at this point, but they weren\'t.</string>
    <string name="millimeter_unit_abbreviation">mm</string>
    <string name="inches">Inches</string>
    <string name="scanned_pages_received_in_bg">Scanned pages are received in the background.</string>
    <string name="thank_message_play_one">If you need help or want to provide feedback, contact us anytime at support@fireamp.eu. We will get back to you as quickly as possible!</string>
    <string name="thank_message_play_one_title">Thank you for purchasing ScanBridge!</string>
    <string name="scan_job_running">Scan job running…</string>
    <string name="color_mode">Color Mode:</string>
    <string name="black_and_white"><![CDATA[Black & White]]></string>
    <string name="color_scan">Color ({bitdepth} bit)</string>
    <string name="auto_detect">Automatic detection</string>
    <string name="grayscale">Grayscale ({bitdepth} bit)</string>
    <string name="save">Save</string>
    <string name="edit_custom_scanner">Edit custom scanner</string>
    <string name="custom_scanner_deletion_confirmation">Do you really want to delete this custom scanner? This action cannot be undone.</string>
    <string name="custom_scanner_deletion">Delete custom scanner</string>
</resources>