...
            ) {
                Text(stringResource(Res.string.cancel_text))
            }
        },
        confirmButton = {
            TextButton(
                modifier = Modifier.testTag("leave_diag_button"),
                onClick = {
                    onConfirmed()
                }
            ) {
                Text(stringResource(Res.string.leave_text))
            }
...
