...
                        nameText = it
                    },
                    label = { Text(stringResource(R.string.name)) },
                    placeholder = { Text(stringResource(R.string.printer_name_placeholder)) }
                )
                OutlinedTextField(
                    modifier = Modifier.testTag("url_input"),
                    value = urlText,
                    onValueChange = {
                        urlErrorState = null
                        urlText = it
                    },
                    label = { Text(stringResource(R.string.url_ipp_resource)) },
...
