...
                }
            }
        },
        floatingActionButton = {
            if (unindexedSelectedScreen.fabActivated) {
                FloatingActionButton(
                    modifier = Modifier.testTag("custom_scanner_fab"),
                    onClick = {
                        showCustomDialog = EditedCustomScanner.New
                    }
                ) {
                    Icon(
                        Icons.Filled.Create,
...
