package io.github.chrisimx.scanbridge

import android.util.Log
import androidx.compose.ui.test.ExperimentalTestApi
import androidx.compose.ui.test.assertIsDisplayed
import androidx.compose.ui.test.hasTestTag
import androidx.compose.ui.test.hasText
import androidx.compose.ui.test.junit4.createAndroidComposeRule
import androidx.compose.ui.test.onNodeWithTag
import androidx.compose.ui.test.onNodeWithText
import androidx.compose.ui.test.performClick
import androidx.compose.ui.test.performTextInput
import androidx.test.espresso.Espresso.pressBack
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.rule.GrantPermissionRule
import io.github.chrisimx.esclmockserver.EsclMockServer
import io.github.chrisimx.scanbridge.db.ScanBridgeDb
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.koin.mp.KoinPlatform.getKoin

class ScanBridgeTest {
    @get:Rule
    val composeTestRule = createAndroidComposeRule<MainActivity>()

    @get:Rule
    val permissionRule: GrantPermissionRule = GrantPermissionRule.grant(
        android.Manifest.permission.POST_NOTIFICATIONS
    )

    @Before
    @After
    fun cleanupForTest() {
        val scanBridgeDb: ScanBridgeDb = getKoin().get()
        scanBridgeDb.clearAllTables()
    }

    @Test
    fun discovery() {
        composeTestRule.onNodeWithText("Discovery").assertIsDisplayed()

        composeTestRule.onNodeWithText("Available scanners").assertIsDisplayed()

        composeTestRule.onNodeWithText("Settings").assertIsDisplayed()
    }

    @OptIn(ExperimentalTestApi::class)
    @Test
    fun scanningInterface() {
        val server = EsclMockServer {}

        server.use {
            composeTestRule.onNodeWithTag("custom_scanner_fab").performClick()

            composeTestRule.onNodeWithTag("url_input")
                .performTextInput("http://127.0.0.1:8080/eSCL")
            composeTestRule.onNodeWithText("Just connect").performClick()

            composeTestRule.waitUntilExactlyOneExists(hasText("No pages", substring = true), 1000)
        }

        pressBack()

        composeTestRule.waitForIdle()

        composeTestRule.onNodeWithTag("leave_diag_button").performClick()
    }

    @OptIn(ExperimentalTestApi::class)
    @Test
    fun scan() {
        val server = EsclMockServer {}

        server.use {
            val url = InstrumentationRegistry.getArguments()
                .getString("escl_server_url") ?: "http://127.0.0.1:8080/eSCL"

            testConnectToScanner(url)
        }
    }

    @OptIn(ExperimentalTestApi::class)
    fun testConnectToScanner(url: String) {
        composeTestRule.onNodeWithTag("custom_scanner_fab").performClick()

        Log.d("ScanBridgeTest", "Trying URL: $url")
        composeTestRule.onNodeWithTag("url_input").performTextInput(url)
        composeTestRule.onNodeWithText("Just connect").performClick()

        composeTestRule.onNodeWithText("Scan", useUnmergedTree = true).performClick()

        composeTestRule.waitUntilAtLeastOneExists(hasTestTag("scan_page"), 5000)

        pressBack()

        composeTestRule.waitForIdle()
        composeTestRule.onNodeWithTag("leave_diag_button").performClick()

        composeTestRule.onNodeWithTag("bottombutton1").performClick()
    }

    @OptIn(ExperimentalTestApi::class)
    @Test
    fun testRootURLFix() {
        val server = EsclMockServer {
            resourcePath = ""
        }

        server.use {
            testConnectToScanner("http://127.0.0.1:8080")
        }
    }
}
